--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch==2.0.1
-torchvision==0.15.2
+torch==2.2.2
+torchvision==0.17.2
 onnx==1.14.0
 onnxruntime==1.15.1
 pycocotools==2.0.7
@@ -7,3 +7,11 @@ PyYAML==6.0.1
 scipy==1.13.0
 onnxsim==0.4.36
 onnxruntime-gpu==1.18.0
+opencv-python
+psutil
+matplotlib
+tqdm
+requests
+pandas
+clearml
+boto3>=1.9
